--- a/app/src/main/res/layout/activity_brown_noise.xml
+++ b/app/src/main/res/layout/activity_brown_noise.xml
@@ -8,10 +8,11 @@
 
     <Button
         android:id="@+id/btnPlay"
-        style="@style/JuliusButton"
-        android:layout_width="117dp"
-        android:layout_height="74dp"
-        android:text="PLAY"
+        style="@style/greenButton"
+        android:layout_width="78dp"
+        android:layout_height="55dp"
+        android:background="@drawable/button_custom"
+        android:drawableStart="@android:drawable/ic_media_play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.272"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,10 +22,11 @@
 
     <Button
         android:id="@+id/btnPause"
-        style="@style/JuliusButton"
-        android:layout_width="117dp"
-        android:layout_height="74dp"
-        android:text="PAUSE"
+        style="@style/greenButton"
+        android:layout_width="75dp"
+        android:layout_height="55dp"
+        android:background="@drawable/button_custom"
+        android:drawableStart="@android:drawable/ic_media_pause"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.724"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -34,11 +36,12 @@
 
     <Button
         android:id="@+id/viewButton5"
-        style="@style/JuliusButton"
-        android:layout_width="212dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="100dp"
+        style="@style/flatButton"
+        android:layout_width="91dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="160dp"
+        android:background="@drawable/button_custom"
         android:onClick="backClick"
         android:text="@string/back"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,8 +54,10 @@
         android:layout_marginTop="109dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.538"
         app:srcCompat="@drawable/brownoise" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
