--- a/app/src/main/res/layout/activity_card_maker.xml
+++ b/app/src/main/res/layout/activity_card_maker.xml
@@ -51,7 +51,7 @@
 
         <Button
             android:id="@+id/createButton"
-            style="@style/JuliusButton"
+            style="@style/greenButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
@@ -60,7 +60,7 @@
 
         <Button
             android:id="@+id/doneButton"
-            style="@style/JuliusButton"
+            style="@style/greenButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
