--- a/app/src/main/res/layout/activity_create_cards.xml
+++ b/app/src/main/res/layout/activity_create_cards.xml
@@ -44,7 +44,7 @@
 
     <Button
         android:id="@+id/button"
-        style="@style/JuliusButton"
+        style="@style/greenButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="generateDeck"
