--- a/app/src/main/res/layout/activity_deck_menu.xml
+++ b/app/src/main/res/layout/activity_deck_menu.xml
@@ -38,7 +38,7 @@
 
     <Button
         android:id="@+id/createNewDeckButton"
-        style="@style/JuliusButton"
+        style="@style/greenButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="createCardClick"
