--- a/app/src/main/res/layout/activity_events_menu.xml
+++ b/app/src/main/res/layout/activity_events_menu.xml
@@ -54,7 +54,7 @@
 
     <Button
         android:id="@+id/addButton"
-        style="@style/JuliusButton"
+        style="@style/greenButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
