--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -22,7 +22,7 @@
 
     <Button
         android:id="@+id/btnCallUs"
-        style="@style/JuliusButton"
+        style="@style/greenButton"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text="Call us"
@@ -63,7 +63,7 @@
 
     <Button
         android:id="@+id/btnEmailUs"
-        style="@style/JuliusButton"
+        style="@style/greenButton"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text="Email Us"
@@ -76,7 +76,7 @@
 
     <Button
         android:id="@+id/btntipToTeam"
-        style="@style/JuliusButton"
+        style="@style/greenButton"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text="Tip Us"
