--- a/app/src/main/res/layout/activity_timer_menu.xml
+++ b/app/src/main/res/layout/activity_timer_menu.xml
@@ -8,7 +8,7 @@
 
     <Button
         android:id="@+id/btnStartPauseTime"
-        style="@style/JuliusButton"
+        style="@style/greenButton"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginStart="120dp"
@@ -52,7 +52,7 @@
 
     <Button
         android:id="@+id/btnResetTimer"
-        style="@style/JuliusButton"
+        style="@style/greenButton"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:text="Reset Timer"
