--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#2B772E</color>
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryDark">#388E3C</color>
+    <color name="colorAccent">#FFC107</color>
 
-    <color name="colorPrimaryLight">#ff5c8d</color>
+    <color name="colorPrimaryLight">#C8E6C9</color>
     <color name="colorAccentDark">#005cb2</color>
     <color name="colorAccentLight">#97F19B</color>
     <color name="colorOnPrimary">@color/white</color>
