--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout6"
-        android:layout_width="362dp"
+        android:layout_width="match_parent"
         android:layout_height="225dp"
         android:background="@drawable/ic_launcher_background"
         android:elevation="2dp"
