--- a/app/src/main/res/layout/activity_tools_menu.xml
+++ b/app/src/main/res/layout/activity_tools_menu.xml
@@ -11,7 +11,7 @@
         android:layout_width="412dp"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_launcher_background"
-        android:elevation="2dp"
+        android:elevation="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,11 +26,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -40,86 +39,103 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/createButton2"
                 style="@style/flatButton"
-                android:layout_width="140dp"
-                android:layout_height="120dp"
-                android:layout_marginEnd="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="32dp"
+                android:layout_weight="1"
                 android:background="@drawable/button_custom"
                 android:drawableTop="@drawable/outline_style_white_36dp"
                 android:onClick="memoryClick"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
                 android:text="MEMORY CARDS" />
 
             <Button
                 android:id="@+id/btnTimerTool"
                 style="@style/flatButton"
                 android:layout_width="140dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="32dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/button_custom"
                 android:drawableTop="@drawable/outline_timer_white_36dp"
                 android:onClick="timerClick"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
                 android:text="TIMER" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="4dp">
 
             <Button
                 android:id="@+id/viewButton6"
                 style="@style/flatButton"
                 android:layout_width="140dp"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/button_custom"
                 android:drawableTop="@drawable/outline_play_arrow_white_36dp"
                 android:onClick="brownNoiseClick"
+                android:paddingLeft="12dp"
+                android:paddingTop="0dp"
+                android:paddingRight="12dp"
                 android:text="BROWN NOISE" />
 
             <Button
                 android:id="@+id/viewButton7"
                 style="@style/flatButton"
                 android:layout_width="140dp"
-                android:layout_height="120dp"
-                android:layout_marginBottom="32dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/button_custom"
                 android:drawableTop="@drawable/outline_today_white_36dp"
                 android:onClick="toDoListClick"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
                 android:text="TO DO LIST" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/viewButton4"
                 style="@style/flatButton"
                 android:layout_width="140dp"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/button_custom"
                 android:drawableTop="@drawable/outline_import_contacts_white_36dp"
                 android:onClick="studyClick"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
                 android:text="STUDY TIPS" />
 
             <Button
                 android:id="@+id/viewButton5"
                 style="@style/flatButton"
                 android:layout_width="140dp"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
                 android:background="@drawable/button_custom"
                 android:drawableTop="@drawable/outline_arrow_back_big_white_36dp"
                 android:onClick="mainClick"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
                 android:text="@string/back" />
         </LinearLayout>
 
