--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,13 +62,14 @@
         android:id="@+id/login"
         style="@style/flatButton"
         android:layout_width="101dp"
-        android:layout_height="44dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginStart="48dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="64dp"
         android:background="@drawable/button_custom"
+        android:drawableTop="@drawable/outline_perm_identity_white_18dp"
         android:elevation="8dp"
         android:onClick="mainActivityBtnPressed"
         android:outlineProvider="background"
