--- a/app/src/main/res/layout/activity_brown_noise.xml
+++ b/app/src/main/res/layout/activity_brown_noise.xml
@@ -6,6 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".Tools.BrownNoise">
 
+    <LinearLayout
+        android:id="@+id/linearLayout6"
+        android:layout_width="match_parent"
+        android:layout_height="225dp"
+        android:background="@drawable/ic_launcher_background"
+        android:elevation="2dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="225dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/stud_orange" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/btnPlay"
         style="@style/greenButton"
@@ -42,6 +61,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="160dp"
         android:background="@drawable/button_custom"
+        android:drawableTop="@drawable/outline_arrow_back_ios_white_36dp"
         android:onClick="backClick"
         android:text="@string/back"
         app:layout_constraintEnd_toEndOf="parent"
