--- a/app/src/main/res/layout/activity_card_menu.xml
+++ b/app/src/main/res/layout/activity_card_menu.xml
@@ -7,49 +7,75 @@
     tools:context=".Tools.MemoryCards.CardMenu">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginEnd="128dp"
+        android:id="@+id/linearLayout6"
+        android:layout_width="match_parent"
+        android:layout_height="225dp"
+        android:background="@drawable/ic_launcher_background"
+        android:elevation="2dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="225dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/stud_orange" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="285dp"
+        android:layout_height="373dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="64dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
+        app:layout_constraintVertical_bias="0.224">
 
         <Button
             android:id="@+id/viewButton6"
-            style="@style/greenButton"
-            android:layout_width="match_parent"
+            style="@style/flatButton"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
+            android:background="@drawable/button_custom"
+            android:drawableTop="@drawable/outline_face_white_36dp"
             android:onClick="myClick"
             android:text="MY CARDS" />
 
         <Button
             android:id="@+id/createButton3"
-            style="@style/greenButton"
-            android:layout_width="match_parent"
+            style="@style/flatButton"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
+            android:background="@drawable/button_custom"
+            android:drawableTop="@drawable/outline_style_white_36dp"
             android:onClick="createCardClick"
             android:text="CREATE CARDS" />
 
         <Button
             android:id="@+id/viewButton7"
-            style="@style/greenButton"
-            android:layout_width="match_parent"
+            style="@style/flatButton"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/button_custom"
+            android:drawableTop="@drawable/outline_arrow_back_ios_white_36dp"
             android:onClick="backClick"
             android:text="BACK" />
 
         <TextView
             android:id="@+id/quoteTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
