--- a/app/src/main/res/layout/activity_personal_page.xml
+++ b/app/src/main/res/layout/activity_personal_page.xml
@@ -4,15 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".Tools.PersonalPage">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="#FFFFFF"
+            android:elevation="4dp"
             android:orientation="vertical">
 
             <TextView
@@ -82,6 +87,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
+                android:background="#FFFFFF"
+                android:elevation="4dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -103,6 +110,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:background="#FFFFFF"
                 android:orientation="horizontal">
 
                 <TextView
@@ -124,6 +132,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
+                android:background="#FFFFFF"
                 android:orientation="horizontal">
 
                 <TextView
@@ -144,6 +153,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:background="#FFFFFF"
                 android:orientation="horizontal">
 
                 <TextView
